updated week 4 hw

--- a/04week/tomorrows-technology/index.html
+++ b/04week/tomorrows-technology/index.html
@@ -10,35 +10,41 @@
 </head>
 
 <body>
-        <section class="stories">
-                <h2>Top Stories</h2>
-                <li>test afdaf afaf</li>
-                <li>test afdaf afaf</li>
-                <li>test afdaf afaf</li>
-                <li>test afdaf afaf</li>
-            </section>
-    <img src="img/bg.jpg" alt="image" class="image">
+    <div class="inline">
+            <img src="img/bg.jpg" alt="image" class="image">
+        <section class="stories_whole">
+            <h3>Top Stories</h3>
+            <div class="underline"></div>
+            <li class="stories">Standford Researchers Make Artificial Skin That Senses Touch</li>
+            <li class="stories">3 New Ways to Wear Your Favorite Chambray Shirt</li>
+            <li class="stories">Where to Buy Your Next Rug</li>
+            <li class="stories">Chukkas that Offer Casual, Comfortable Style</li>
+        </section>
+    </div>
     <header>
         <h2>Tomorrows Technology, Yesterday's Insights</h2>
     </header>
-    <section>
-        Sometimes what the blanafjdafjdkj jdfkdjfd l jfdkfjd fkdfj djfkdfjd fkdljf d djkj
+    <section class="paragraph">
+        Sometimes what the tech world comes up with has already been tried and rejected and really doesn't need to
+        resurrected - like the Taylorist view...
     </section>
     <div class="tech_btn">
         Technology
     </div>
     <footer>
-        <article>
+        <article class="bottom">
             <div class="header">Useful Links</div>
-            <li>stuff</li>
-            <li>stuff</li>
-            <li>stuff</li>
+            <li class="li_footer">About</li>
+            <li class="li_footer">Jobs</li>
+            <li class="li_footer">Team</li>
+            <li class="li_footer">Advertise</li>
+            <li class="li_footer">Terms</li>
         </article>
         <article>
-            <div class="header">Useful Links</div>
-            <li>stuff</li>
-            <li>stuff</li>
-            <li>stuff</li>
+            <div class="header">Social Media</div>
+            <li class="li_footer">Facebook</li>
+            <li class="li_footer">Instagram</li>
+            <li class="li_footer">Twitter</li>
         </article>
     </footer>
 </body>
