--- a/04week/welcome-to-our-site/index.html
+++ b/04week/welcome-to-our-site/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to our site</h1>
+        <h1>Welcome to our <span class="bold_word">site</span></h1>
     </header>
     <section>
         <article>
