--- a/05week/travel-gram/index.html
+++ b/05week/travel-gram/index.html
@@ -1,1 +1,54 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Travel Gram!</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <script src="main.js"></script>
+    
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <header>
+        <h1>Travel-Gram</h1>
+        <p id="desktop">Desktop</p>
+        <p id="tablet">Tablet</p>
+        <p id="mobile">Mobile</p>
+    </header>
+    <main class="grid">
+        <article class="box box1">
 
+        </article>
+        <article class="box box2">
+            
+        </article>
+        <article class="box box3">
+
+        </article>
+        <article class="box box4">
+
+        </article>
+        <article class="box box5">
+
+        </article>
+        <article class="box box6">
+
+        </article>
+        <article class="box box7">
+
+        </article>
+        <article class="box box8">
+
+        </article>
+        <article class="box box9">
+
+        </article>
+        <article class="box box10">
+
+        </article>
+    </main>
+</body>
+</html>
