Upload week 5 hw

--- a/05week/travel-gram/index.html
+++ b/05week/travel-gram/index.html
@@ -1,1 +1,67 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Travel-Gram</title>
+</head>
+
+<body>
+    <div class="container">
+        <header>
+            <h1>Travel-Gram</h1>
+            <h2 class="desktop">Desktop</h2>
+            <h2 class="tablet">Tablet</h2>
+            <h2 class="mobile">Mobile</h2>
+        </header>
+
+        <article class="box1">
+            <img src="img/dog2.jpg" alt="dog">
+            <div class="text">Lorem ipsum dolor sit amet, te his fabellas scripserit. Ne mel discere ancillae. Vim ea suscipit theophrastus mediocritatem, eos ut legere ponderum senserit. Ea sint congue philosophia duo, id est ipsum pertinax. Mea eu menandri expetenda, no diam discere est. Usu laudem labore ei, vix in quodsi maiestatis voluptatibus, quo fabulas deserunt definitionem ea.</div>
+        </article>
+        <article class="box2">
+            <img src="img/dog2.jpg" alt="dog">
+            <div class="text">Lorem ipsum dolor sit amet, te his fabellas scripserit. Ne mel discere ancillae. Vim ea suscipit theophrastus mediocritatem, eos ut legere ponderum senserit. Ea sint congue philosophia duo, id est ipsum pertinax. Mea eu menandri expetenda, no diam discere est. Usu laudem labore ei, vix in quodsi maiestatis voluptatibus, quo fabulas deserunt definitionem ea.</div>
+        </article>
+
+        <article class="box3">
+            <img src="img/dog2.jpg" alt="dog">
+            <div class="text">Lorem ipsum dolor sit amet, te his fabellas scripserit. Ne mel discere ancillae. Vim ea suscipit theophrastus mediocritatem, eos ut legere ponderum senserit. Ea sint congue philosophia duo, id est ipsum pertinax. Mea eu menandri expetenda, no diam discere est. Usu laudem labore ei, vix in quodsi maiestatis voluptatibus, quo fabulas deserunt definitionem ea.</div>
+        </article>
+        <article class="box4">
+            <img src="img/dog2.jpg" alt="dog">
+            <div class="text">Lorem ipsum dolor sit amet, te his fabellas scripserit. Ne mel discere ancillae. Vim ea suscipit theophrastus mediocritatem, eos ut legere ponderum senserit. Ea sint congue philosophia duo, id est ipsum pertinax. Mea eu menandri expetenda, no diam discere est. Usu laudem labore ei, vix in quodsi maiestatis voluptatibus, quo fabulas deserunt definitionem ea.</div>
+        </article>
+        <article class="box5">
+            <img src="img/dog2.jpg" alt="dog">
+            <div class="text">Lorem ipsum dolor sit amet, te his fabellas scripserit. Ne mel discere ancillae. Vim ea suscipit theophrastus mediocritatem, eos ut legere ponderum senserit. Ea sint congue philosophia duo, id est ipsum pertinax. Mea eu menandri expetenda, no diam discere est. Usu laudem labore ei, vix in quodsi maiestatis voluptatibus, quo fabulas deserunt definitionem ea.</div>
+        </article>
+        <article class="box6">
+            <img src="img/dog2.jpg" alt="dog">
+            <div class="text">Lorem ipsum dolor sit amet, te his fabellas scripserit. Ne mel discere ancillae. Vim ea suscipit theophrastus mediocritatem, eos ut legere ponderum senserit. Ea sint congue philosophia duo, id est ipsum pertinax. Mea eu menandri expetenda, no diam discere est. Usu laudem labore ei, vix in quodsi maiestatis voluptatibus, quo fabulas deserunt definitionem ea.</div>
+        </article>
+
+        <article class="box7">
+            <img src="img/dog2.jpg" alt="dog">
+            <div class="text">Lorem ipsum dolor sit amet, te his fabellas scripserit. Ne mel discere ancillae. Vim ea suscipit theophrastus mediocritatem, eos ut legere ponderum senserit. Ea sint congue philosophia duo, id est ipsum pertinax. Mea eu menandri expetenda, no diam discere est. Usu laudem labore ei, vix in quodsi maiestatis voluptatibus, quo fabulas deserunt definitionem ea.</div>
+        </article>
+        <article class="box8">
+            <img src="img/dog2.jpg" alt="dog">
+            <div class="text">Lorem ipsum dolor sit amet, te his fabellas scripserit. Ne mel discere ancillae. Vim ea suscipit theophrastus mediocritatem, eos ut legere ponderum senserit. Ea sint congue philosophia duo, id est ipsum pertinax. Mea eu menandri expetenda, no diam discere est. Usu laudem labore ei, vix in quodsi maiestatis voluptatibus, quo fabulas deserunt definitionem ea.</div>
+        </article>
+        <article class="box9">
+            <img src="img/dog2.jpg" alt="dog">
+            <div class="text">Lorem ipsum dolor sit amet, te his fabellas scripserit. Ne mel discere ancillae. Vim ea suscipit theophrastus mediocritatem, eos ut legere ponderum senserit. Ea sint congue philosophia duo, id est ipsum pertinax. Mea eu menandri expetenda, no diam discere est. Usu laudem labore ei, vix in quodsi maiestatis voluptatibus, quo fabulas deserunt definitionem ea.</div>
+        </article>
+        <article class="box10">
+            <img src="img/dog2.jpg" alt="dog">
+            <div class="text">Lorem ipsum dolor sit amet, te his fabellas scripserit. Ne mel discere ancillae. Vim ea suscipit theophrastus mediocritatem, eos ut legere ponderum senserit. Ea sint congue philosophia duo, id est ipsum pertinax. Mea eu menandri expetenda, no diam discere est. Usu laudem labore ei, vix in quodsi maiestatis voluptatibus, quo fabulas deserunt definitionem ea.</div>
+        </article>
+    </div>
+</body>
+
+</html>
