--- a/05week/travel-gram/index.html
+++ b/05week/travel-gram/index.html
@@ -1,1 +1,78 @@
+<!DOCTYPE html>
 
+<head>
+    <title>Document</title>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <div class="container">
+        <div>
+            <img src="https://picsum.photos/100" alt="" srcset="">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, necessitatibus?</p>
+            <input type="button" value="button">
+        </div>
+        <div><img src="https://picsum.photos/100" alt="" srcset="">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, necessitatibus?</p>
+            <input type="button" value="button">
+        </div>
+        <div><img src="https://picsum.photos/100" alt="" srcset="">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, necessitatibus?</p>
+            <input type="button" value="button">
+        </div>
+        <div><img src="https://picsum.photos/100" alt="" srcset="">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, necessitatibus?</p>
+            <input type="button" value="button">
+        </div>
+        <div><img src="https://picsum.photos/100" alt="" srcset="">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, necessitatibus?</p>
+            <input type="button" value="button">
+        </div>
+        <div><img src="https://picsum.photos/100" alt="" srcset="">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, necessitatibus?</p>
+            <input type="button" value="button">
+        </div>
+        <div><img src="https://picsum.photos/100" alt="" srcset="">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, necessitatibus?</p>
+            <input type="button" value="button">
+        </div>
+        <div><img src="https://picsum.photos/100" alt="" srcset="">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, necessitatibus?</p>
+            <input type="button" value="button">
+        </div>
+
+
+
+
+
+
+    </div>
+    <div class="container2">
+            <div>
+                    <img src="https://picsum.photos/100" alt="" srcset="">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, necessitatibus?</p>
+                    <input type="button" value="button">
+                </div>
+                <div>
+                        <img src="https://picsum.photos/100" alt="" srcset="">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, necessitatibus?</p>
+                        <input type="button" value="button">
+                    </div>
+                    <div>
+                            <img src="https://picsum.photos/100" alt="" srcset="">
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, necessitatibus?</p>
+                            <input type="button" value="button">
+                        </div>
+                        <div>
+                                <img src="https://picsum.photos/100" alt="" srcset="">
+                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, necessitatibus?</p>
+                                <input type="button" value="button">
+                            </div>
+
+    </div>
+
+
+</body>
+
+</html>
