--- a/05week/travel-gram/index.html
+++ b/05week/travel-gram/index.html
@@ -2,8 +2,8 @@
 
 <head>
     <title>Document</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/reset.css">
 </head>
 
 <body>
@@ -49,27 +49,39 @@
 
     </div>
     <div class="container2">
-            <div>
-                    <img src="https://picsum.photos/100" alt="" srcset="">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, necessitatibus?</p>
-                    <input type="button" value="button">
-                </div>
-                <div>
-                        <img src="https://picsum.photos/100" alt="" srcset="">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, necessitatibus?</p>
-                        <input type="button" value="button">
-                    </div>
-                    <div>
-                            <img src="https://picsum.photos/100" alt="" srcset="">
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, necessitatibus?</p>
-                            <input type="button" value="button">
-                        </div>
-                        <div>
-                                <img src="https://picsum.photos/100" alt="" srcset="">
-                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, necessitatibus?</p>
-                                <input type="button" value="button">
-                            </div>
+        <div>
+            <img src="https://picsum.photos/100" alt="" srcset="">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, necessitatibus?</p>
+            <input type="button" value="button">
+        </div>
+        <div>
+            <img src="https://picsum.photos/100" alt="" srcset="">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, necessitatibus?</p>
+            <input type="button" value="button">
+        </div>
+        <div>
+            <img src="https://picsum.photos/100" alt="" srcset="">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, necessitatibus?</p>
+            <input type="button" value="button">
+        </div>
+        <div>
+            <img src="https://picsum.photos/100" alt="" srcset="">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, necessitatibus?</p>
+            <input type="button" value="button">
+        </div>
 
+    </div>
+    <div class="container3">
+        <div>
+            <img src="https://picsum.photos/100" alt="" srcset="">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, necessitatibus?</p>
+            <input type="button" value="button">
+        </div>
+        <div>
+            <img src="https://picsum.photos/100" alt="" srcset="">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, necessitatibus?</p>
+            <input type="button" value="button">
+        </div>
     </div>
 
 
