--- a/04week/nasa/index.html
+++ b/04week/nasa/index.html
@@ -6,22 +6,39 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Spicy+Rice" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaijaan|Open+Sans|Spicy+Rice" rel="stylesheet">
 </head>
 <body>
+    <header>
+        <h1>SpaceX</h1>
+    </header>
     <main>
-        <h1>NASA</h1>
+        <div class="container-1">
+            <div class="box-1">
+                <h3>Social Media</h3>
+                <div>Twitter - @elon</div>
+                <div>Facebook - fb.com/musky</div>
+                <div>Instagram - @muskrat</div>
+                <div>YouTube - youtube.com/spacex</div>
+            </div>
+            <div class="box-2">
+                <h3>OFFICE INFO</h3>
+                <div>Public Communications Office</div>
+                <div>Musk Headquarters</div>
+                <div>300 E. Street SW. Suite 5R30</div>
+                <div>Washington, DC 20546</div>
+                <div>(202) 358-0001 (Office)</div>
+                <div>(202) 358-4338 (Fax)</div>
+            </div>
+            <div class="box-3">
+                <h3>CONTACT US</h3>
+                <div>Name</div>
+                <form><input type="text" name="firstname"></form>
+                <div>Message</div>
+                <form id="message"><input type="text" name="message"></form>
+                <input type="submit" value="Submit">
+            </div>
+        </div>
     </main>
-    <section>
-        <article>
-            <h1>Social Media</h1>
-        </article>
-        <article>
-            <h1>OFFICE INFO</h1>
-        </article>
-        <article>
-            <h1>CONTACT US</h1>
-        </article>
-    </section>
 </body>
 </html>
