--- a/05week/travel-gram/index.html
+++ b/05week/travel-gram/index.html
@@ -14,63 +14,63 @@
             <h1>Travel-Gram</h1>
             <p><span class="desktop">Desktop</span><span class="tablet">Tablet</span><span class="phone">Phone</span></p>
         </header>
-        <div class=" box box1">
+        <div class="box box1">
             <img src="https://edit.co.uk/uploads/2016/12/Image-1-Alternatives-to-stock-photography-Thinkstock.jpg" alt="Stock Photo">
-            <p>lLorem ipsum dolor sit amet consectetur adipisicing elit. Quia, quae, enim. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur animi distinctio quod odio inventore accusamus cupiditate excepturi corporis alias, deserunt maxime provident quo labore exercitationem eum facere. Non, est corrupti.</p>
+            <p>This is Box One. lLorem ipsum dolor sit amet consectetur adipisicing elit. Quia, quae, enim. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur animi distinctio quod odio inventore accusamus cupiditate excepturi corporis alias, deserunt maxime provident quo labore exercitationem eum facere. Non, est corrupti.</p>
             <button id="button1">Button</button>
             <a href="wwww.google.com">Link</a>
         </div>
         <div class="box box2">
             <img src="https://edit.co.uk/uploads/2016/12/Image-1-Alternatives-to-stock-photography-Thinkstock.jpg" alt="Stock Photo">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.]ptatibus officia deleniti in harum voluptates optio, a explicabo mollitia similique repellendus. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem, quia accusamus beatae quaerat libero, illo accusantium quisquam suscipit facere perspiciatis sit! Blanditiis id quasi mollitia expedita aliquam et? Cumque, enim.</p>
+            <p>This is box Two. Lorem ipsum dolor sit amet consectetur adipisicing elit.]ptatibus officia deleniti in harum voluptates optio, a explicabo mollitia similique repellendus. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem, quia accusamus beatae quaerat libero, illo accusantium quisquam suscipit facere perspiciatis sit! Blanditiis id quasi mollitia expedita aliquam et? Cumque, enim.</p>
             <button id="button1">Button</button>
             <a href="wwww.google.com">Link</a>
         </div>
         <div class="box box3">
             <img src="https://edit.co.uk/uploads/2016/12/Image-1-Alternatives-to-stock-photography-Thinkstock.jpg" alt="Stock Photo">
-            <p>Lorem ipsum dolor sit am ipsa ab eveniet tenetur illo voluptatibus officia deleniti in harum voluptates optio, a explicabo mollitia similique repellendus. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem, quia accusamus beatae quaerat libero, illo accusantium quisquam suscipit facere perspiciatis sit! Blanditiis id quasi mollitia expedita aliquam et? Cumque, enim.</p>
+            <p>This is Box Three. Lorem ipsum dolor sit am ipsa ab eveniet tenetur illo voluptatibus officia deleniti in harum voluptates optio, a explicabo mollitia similique repellendus. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem, quia accusamus beatae quaerat libero, illo accusantium quisquam suscipit facere perspiciatis sit! Blanditiis id quasi mollitia expedita aliquam et? Cumque, enim.</p>
             <button id="button1">Button</button>
             <a href="wwww.google.com">Link</a>
          </div>
         <div class="box box4">
             <img src="https://edit.co.uk/uploads/2016/12/Image-1-Alternatives-to-stock-photography-Thinkstock.jpg" alt="Stock Photo">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad labore, quis odit earum ipsam illum laborum molestias voluptatem pariatur, temporibus tempore molestiae dolorem ducimus, minima a atque nobis. Assumenda, perferendis!Lorem</p>
+            <p>This is Box 4. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad labore, quis odit earum ipsam illum laborum molestias voluptatem pariatur, temporibus tempore molestiae dolorem ducimus, minima a atque nobis. Assumenda, perferendis!Lorem</p>
             <button id="button1">Button</button>
             <a href="wwww.google.com">Link</a>    
         </div>
         <div class="box box5">
             <img src="https://edit.co.uk/uploads/2016/12/Image-1-Alternatives-to-stock-photography-Thinkstock.jpg" alt="Stock Photo">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, quam! Itaque inventore odit ipsa ab eveniet tenetur illo voluptatibus officia deleniti in harum voluptates optio, a explicabo mollitia similique repellendus. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem, quia accusamus beatae quaerat libero, illo accusantium quisquam suscipit facere perspiciatis sit! Blanditiis id quasi mollitia expedita aliquam et? Cumque, enim.</p>
+            <p>This is Box 5. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, quam! Itaque inventore odit ipsa ab eveniet tenetur illo voluptatibus officia deleniti in harum voluptates optio, a explicabo mollitia similique repellendus. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem, quia accusamus beatae quaerat libero, illo accusantium quisquam suscipit facere perspiciatis sit! Blanditiis id quasi mollitia expedita aliquam et? Cumque, enim.</p>
             <button id="button1">Button</button>
             <a href="wwww.google.com">Link</a>
         </div>
         <div class="box box6">
             <img src="https://edit.co.uk/uploads/2016/12/Image-1-Alternatives-to-stock-photography-Thinkstock.jpg" alt="Stock Photo">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum perspiciatis omnis quae, magni provident corrupti nostrum aspernatur voluptatum possimus nemo voluptatibus? At, dolor eos. At molestiae quam assumenda quasi sequi?Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic voluptas adipisci nostrum, error magnam, nam dignissimos sapiente dolore voluptate fugiat itaque qui est! At voluptas deleniti aperiam expedita dolorum voluptatum.</p>
+            <p>This is Box 6. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum perspiciatis omnis quae, magni provident corrupti nostrum aspernatur voluptatum possimus nemo voluptatibus? At, dolor eos. At molestiae quam assumenda quasi sequi?Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic voluptas adipisci nostrum, error magnam, nam dignissimos sapiente dolore voluptate fugiat itaque qui est! At voluptas deleniti aperiam expedita dolorum voluptatum.</p>
             <button id="button1">Button</button>
             <a href="wwww.google.com">Link</a>
         </div>
         <div class="box box7">
             <img src="https://edit.co.uk/uploads/2016/12/Image-1-Alternatives-to-stock-photography-Thinkstock.jpg" alt="Stock Photo">
-            <p>Lorem ipsum dolor sit Itaque inventore odit ipsa ab eveniet tenetur illo voluptatibus officia deleniti in harum voluptates optio, a explicabo mollitia similique repellendus. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem, quia accusamus beatae quaerat libero, illo accusantium quisquam suscipit facere perspiciatis sit! Blanditiis id quasi mollitia expedita aliquam et? Cumque, enim.</p>
+            <p>This is Box 7. Lorem ipsum dolor sit Itaque inventore odit ipsa ab eveniet tenetur illo voluptatibus officia deleniti in harum voluptates optio, a explicabo mollitia similique repellendus. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem, quia accusamus beatae quaerat libero, illo accusantium quisquam suscipit facere perspiciatis sit! Blanditiis id quasi mollitia expedita aliquam et? Cumque, enim.</p>
             <button id="button1">Button</button>
             <a href="wwww.google.com">Link</a>
         </div>
         <div class="box box8">
             <img src="https://edit.co.uk/uploads/2016/12/Image-1-Alternatives-to-stock-photography-Thinkstock.jpg" alt="Stock Photo">
-            <p>Lorem ipsm! Itaque inventore odit ipsa ab eveniet tenetur illo voluptatibus officia deleniti in harum voluptates optio, a explicabo mollitia similique repellendus. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem, quia accusamus beatae quaerat libero, illo accusantium quisquam suscipit facere perspiciatis sit! Blanditiis id quasi mollitia expedita aliquam et? Cumque, enim.</p>
+            <p>This is box 8. Lorem ipsm! Itaque inventore odit ipsa ab eveniet tenetur illo voluptatibus officia deleniti in harum voluptates optio, a explicabo mollitia similique repellendus. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem, quia accusamus beatae quaerat libero, illo accusantium quisquam suscipit facere perspiciatis sit! Blanditiis id quasi mollitia expedita aliquam et? Cumque, enim.</p>
             <button id="button1">Button</button>
             <a href="wwww.google.com">Link</a>
         </div>
         <div class="box box9">
             <img src="https://edit.co.uk/uploads/2016/12/Image-1-Alternatives-to-stock-photography-Thinkstock.jpg" alt="Stock Photo">
-            <p>Lorem ipsum dolor sit ame elit. Quia, quam! Itaque inventore odit ipsa ab eveniet tenetur illo voluptatibus officia deleniti in harum voluptates optio, a explicabo mollitia similique repellendus. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem, quia accusamus beatae quaerat libero, illo accusantium quisquam suscipit facere perspiciatis sit! Blanditiis id quasi mollitia expedita aliquam et? Cumque, enim.</p>
+            <p>This is Box 9. Lorem ipsum dolor sit ame elit. Quia, quam! Itaque inventore odit ipsa ab eveniet tenetur illo voluptatibus officia deleniti in harum voluptates optio, a explicabo mollitia similique repellendus. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem, quia accusamus beatae quaerat libero, illo accusantium quisquam suscipit facere perspiciatis sit! Blanditiis id quasi mollitia expedita aliquam et? Cumque, enim.</p>
             <button id="button1">Button</button>
             <a href="wwww.google.com">Link</a>
         </div>
         <div class="box box10">
             <img src="https://edit.co.uk/uploads/2016/12/Image-1-Alternatives-to-stock-photography-Thinkstock.jpg" alt="Stock Photo">
-            <p>Lorem ipsum d\quam! Itaque inventore odit ipsa ab eveniet tenetur illo voluptatibus officia deleniti in harum voluptates optio, a explicabo mollitia similique repellendus. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem, quia accusamus beatae quaerat libero, illo accusantium quisquam suscipit facere perspiciatis sit! Blanditiis id quasi mollitia expedita aliquam et? Cumque, enim.</p>
+            <p>This is Box 10. Lorem ipsum d\quam! Itaque inventore odit ipsa ab eveniet tenetur illo voluptatibus officia deleniti in harum voluptates optio, a explicabo mollitia similique repellendus. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem, quia accusamus beatae quaerat libero, illo accusantium quisquam suscipit facere perspiciatis sit! Blanditiis id quasi mollitia expedita aliquam et? Cumque, enim.</p>
             <button id="button1">Button</button>
             <a href="wwww.google.com">Link</a>
         </div>
