final week 5 part 1 upload

--- a/05week/travel-gram/index.html
+++ b/05week/travel-gram/index.html
@@ -20,47 +20,171 @@
         </header>
 
         <article class="box1">
-            <img src="img/dog2.jpg" alt="dog">
-            <div class="text">Lorem ipsum dolor sit amet, te his fabellas scripserit. Ne mel discere ancillae. Vim ea suscipit theophrastus mediocritatem, eos ut legere ponderum senserit. Ea sint congue philosophia duo, id est ipsum pertinax. Mea eu menandri expetenda, no diam discere est. Usu laudem labore ei, vix in quodsi maiestatis voluptatibus, quo fabulas deserunt definitionem ea.</div>
+
+            <img src="img/dog2.jpg" alt="dog" class="img img1">
+            <div class="img_text">
+                <div class="text">Lorem ipsum dolor sit amet, te his fabellas scripserit. Ne mel discere ancillae. Vim ea suscipit theophrastus
+                    mediocritatem, eos ut legere ponderum senserit. Ea sint congue philosophia duo, id est ipsum pertinax.
+                    Mea eu menandri expetenda, no diam discere est. Usu laudem labore ei, vix in quodsi maiestatis voluptatibus,
+                    quo fabulas deserunt definitionem ea.</div>
+                <div class="red_container">
+                    <div class="red_circle"></div>
+                    <div class="text3">3</div>
+                    <div class="red_box red_box1"></div>
+                </div>
+            </div>
         </article>
+
         <article class="box2">
-            <img src="img/dog2.jpg" alt="dog">
-            <div class="text">Lorem ipsum dolor sit amet, te his fabellas scripserit. Ne mel discere ancillae. Vim ea suscipit theophrastus mediocritatem, eos ut legere ponderum senserit. Ea sint congue philosophia duo, id est ipsum pertinax. Mea eu menandri expetenda, no diam discere est. Usu laudem labore ei, vix in quodsi maiestatis voluptatibus, quo fabulas deserunt definitionem ea.</div>
-        </article>
+
+                <img src="img/dog2.jpg" alt="dog" class="img img2">
+                <div class="img_text">
+                    <div class="text">Lorem ipsum dolor sit amet, te his fabellas scripserit. Ne mel discere ancillae. Vim ea suscipit theophrastus
+                        mediocritatem, eos ut legere ponderum senserit. Ea sint congue philosophia duo, id est ipsum pertinax.
+                        Mea eu menandri expetenda, no diam discere est. Usu laudem labore ei, vix in quodsi maiestatis voluptatibus,
+                        quo fabulas deserunt definitionem ea.</div>
+                    <div class="red_container">
+                        <div class="red_circle"></div>
+                        <div class="text3">3</div>
+                        <div class="red_box red_box2"></div>
+                    </div>
+                </div>
+            </article>
 
         <article class="box3">
-            <img src="img/dog2.jpg" alt="dog">
-            <div class="text">Lorem ipsum dolor sit amet, te his fabellas scripserit. Ne mel discere ancillae. Vim ea suscipit theophrastus mediocritatem, eos ut legere ponderum senserit. Ea sint congue philosophia duo, id est ipsum pertinax. Mea eu menandri expetenda, no diam discere est. Usu laudem labore ei, vix in quodsi maiestatis voluptatibus, quo fabulas deserunt definitionem ea.</div>
-        </article>
+
+
+                <img src="img/dog2.jpg" alt="dog" class="img img3">
+                <div class="img_text">
+                    <div class="text">Lorem ipsum dolor sit amet, te his fabellas scripserit. Ne mel discere ancillae. Vim ea suscipit theophrastus
+                        mediocritatem, eos ut legere ponderum senserit. Ea sint congue philosophia duo, id est ipsum pertinax.
+                        Mea eu menandri expetenda, no diam discere est. Usu laudem labore ei, vix in quodsi maiestatis voluptatibus,
+                        quo fabulas deserunt definitionem ea.</div>
+                    <div class="red_container">
+                        <div class="red_circle"></div>
+                        <div class="text3">3</div>
+                        <div class="red_box red_box3"></div>
+                    </div>
+                </div>
+            </article>
+
         <article class="box4">
-            <img src="img/dog2.jpg" alt="dog">
-            <div class="text">Lorem ipsum dolor sit amet, te his fabellas scripserit. Ne mel discere ancillae. Vim ea suscipit theophrastus mediocritatem, eos ut legere ponderum senserit. Ea sint congue philosophia duo, id est ipsum pertinax. Mea eu menandri expetenda, no diam discere est. Usu laudem labore ei, vix in quodsi maiestatis voluptatibus, quo fabulas deserunt definitionem ea.</div>
-        </article>
+
+                <img src="img/dog2.jpg" alt="dog" class="img img4_5 img4">
+                <div class="img_text">
+                    <div class="text">Lorem ipsum dolor sit amet, te his fabellas scripserit. Ne mel discere ancillae. Vim ea suscipit theophrastus
+                        mediocritatem, eos ut legere ponderum senserit. Ea sint congue philosophia duo, id est ipsum pertinax.
+                        Mea eu menandri expetenda, no diam discere est. Usu laudem labore ei, vix in quodsi maiestatis voluptatibus,
+                        quo fabulas deserunt definitionem ea.</div>
+                    <div class="red_container">
+                        <div class="red_circle"></div>
+                        <div class="text3">3</div>
+                        <div class="red_box"></div>
+                    </div>
+                </div>
+            </article>
+
+
         <article class="box5">
-            <img src="img/dog2.jpg" alt="dog">
-            <div class="text">Lorem ipsum dolor sit amet, te his fabellas scripserit. Ne mel discere ancillae. Vim ea suscipit theophrastus mediocritatem, eos ut legere ponderum senserit. Ea sint congue philosophia duo, id est ipsum pertinax. Mea eu menandri expetenda, no diam discere est. Usu laudem labore ei, vix in quodsi maiestatis voluptatibus, quo fabulas deserunt definitionem ea.</div>
-        </article>
+
+                <img src="img/dog2.jpg" alt="dog" class="img img4_5 img5_6">
+                <div class="img_text">
+                    <div class="text">Lorem ipsum dolor sit amet, te his fabellas scripserit. Ne mel discere ancillae. Vim ea suscipit theophrastus
+                        mediocritatem, eos ut legere ponderum senserit. Ea sint congue philosophia duo, id est ipsum pertinax.
+                        Mea eu menandri expetenda, no diam discere est. Usu laudem labore ei, vix in quodsi maiestatis voluptatibus,
+                        quo fabulas deserunt definitionem ea.</div>
+                    <div class="red_container">
+                        <div class="red_circle"></div>
+                        <div class="text3">3</div>
+                        <div class="red_box"></div>
+                    </div>
+                </div>
+            </article>
+
+
         <article class="box6">
-            <img src="img/dog2.jpg" alt="dog">
-            <div class="text">Lorem ipsum dolor sit amet, te his fabellas scripserit. Ne mel discere ancillae. Vim ea suscipit theophrastus mediocritatem, eos ut legere ponderum senserit. Ea sint congue philosophia duo, id est ipsum pertinax. Mea eu menandri expetenda, no diam discere est. Usu laudem labore ei, vix in quodsi maiestatis voluptatibus, quo fabulas deserunt definitionem ea.</div>
-        </article>
+
+                <img src="img/dog2.jpg" alt="dog" class="img img5_6">
+                <div class="img_text">
+                    <div class="text">Lorem ipsum dolor sit amet, te his fabellas scripserit. Ne mel discere ancillae. Vim ea suscipit theophrastus
+                        mediocritatem, eos ut legere ponderum senserit. Ea sint congue philosophia duo, id est ipsum pertinax.
+                        Mea eu menandri expetenda, no diam discere est. Usu laudem labore ei, vix in quodsi maiestatis voluptatibus,
+                        quo fabulas deserunt definitionem ea.</div>
+                    <div class="red_container">
+                        <div class="red_circle"></div>
+                        <div class="text3">3</div>
+                        <div class="red_box"></div>
+                    </div>
+                </div>
+            </article>
+
 
         <article class="box7">
-            <img src="img/dog2.jpg" alt="dog">
-            <div class="text">Lorem ipsum dolor sit amet, te his fabellas scripserit. Ne mel discere ancillae. Vim ea suscipit theophrastus mediocritatem, eos ut legere ponderum senserit. Ea sint congue philosophia duo, id est ipsum pertinax. Mea eu menandri expetenda, no diam discere est. Usu laudem labore ei, vix in quodsi maiestatis voluptatibus, quo fabulas deserunt definitionem ea.</div>
-        </article>
+
+                <img src="img/dog2.jpg" alt="dog" class="img img7_10">
+                <div class="img_text">
+                    <div class="text">Lorem ipsum dolor sit amet, te his fabellas scripserit. Ne mel discere ancillae. Vim ea suscipit theophrastus
+                        mediocritatem, eos ut legere ponderum senserit. Ea sint congue philosophia duo, id est ipsum pertinax.
+                        Mea eu menandri expetenda, no diam discere est. Usu laudem labore ei, vix in quodsi maiestatis voluptatibus,
+                        quo fabulas deserunt definitionem ea.</div>
+                    <div class="red_container">
+                        <div class="red_circle"></div>
+                        <div class="text3">3</div>
+                        <div class="red_box"></div>
+                    </div>
+                </div>
+            </article>
+
+
         <article class="box8">
-            <img src="img/dog2.jpg" alt="dog">
-            <div class="text">Lorem ipsum dolor sit amet, te his fabellas scripserit. Ne mel discere ancillae. Vim ea suscipit theophrastus mediocritatem, eos ut legere ponderum senserit. Ea sint congue philosophia duo, id est ipsum pertinax. Mea eu menandri expetenda, no diam discere est. Usu laudem labore ei, vix in quodsi maiestatis voluptatibus, quo fabulas deserunt definitionem ea.</div>
-        </article>
+                <img src="img/dog2.jpg" alt="dog" class="img img7_10">
+                <div class="img_text">
+                    <div class="text">Lorem ipsum dolor sit amet, te his fabellas scripserit. Ne mel discere ancillae. Vim ea suscipit theophrastus
+                        mediocritatem, eos ut legere ponderum senserit. Ea sint congue philosophia duo, id est ipsum pertinax.
+                        Mea eu menandri expetenda, no diam discere est. Usu laudem labore ei, vix in quodsi maiestatis voluptatibus,
+                        quo fabulas deserunt definitionem ea.</div>
+                    <div class="red_container">
+                        <div class="red_circle"></div>
+                        <div class="text3">3</div>
+                        <div class="red_box"></div>
+                    </div>
+                </div>
+            </article>
+
+
         <article class="box9">
-            <img src="img/dog2.jpg" alt="dog">
-            <div class="text">Lorem ipsum dolor sit amet, te his fabellas scripserit. Ne mel discere ancillae. Vim ea suscipit theophrastus mediocritatem, eos ut legere ponderum senserit. Ea sint congue philosophia duo, id est ipsum pertinax. Mea eu menandri expetenda, no diam discere est. Usu laudem labore ei, vix in quodsi maiestatis voluptatibus, quo fabulas deserunt definitionem ea.</div>
-        </article>
+
+                <img src="img/dog2.jpg" alt="dog" class="img img7_10">
+                <div class="img_text">
+                    <div class="text">Lorem ipsum dolor sit amet, te his fabellas scripserit. Ne mel discere ancillae. Vim ea suscipit theophrastus
+                        mediocritatem, eos ut legere ponderum senserit. Ea sint congue philosophia duo, id est ipsum pertinax.
+                        Mea eu menandri expetenda, no diam discere est. Usu laudem labore ei, vix in quodsi maiestatis voluptatibus,
+                        quo fabulas deserunt definitionem ea.</div>
+                    <div class="red_container">
+                        <div class="red_circle"></div>
+                        <div class="text3">3</div>
+                        <div class="red_box"></div>
+                    </div>
+                </div>
+            </article>
+
+
         <article class="box10">
-            <img src="img/dog2.jpg" alt="dog">
-            <div class="text">Lorem ipsum dolor sit amet, te his fabellas scripserit. Ne mel discere ancillae. Vim ea suscipit theophrastus mediocritatem, eos ut legere ponderum senserit. Ea sint congue philosophia duo, id est ipsum pertinax. Mea eu menandri expetenda, no diam discere est. Usu laudem labore ei, vix in quodsi maiestatis voluptatibus, quo fabulas deserunt definitionem ea.</div>
-        </article>
+
+                <img src="img/dog2.jpg" alt="dog" class="img img7_10">
+                <div class="img_text">
+                    <div class="text">Lorem ipsum dolor sit amet, te his fabellas scripserit. Ne mel discere ancillae. Vim ea suscipit theophrastus
+                        mediocritatem, eos ut legere ponderum senserit. Ea sint congue philosophia duo, id est ipsum pertinax.
+                        Mea eu menandri expetenda, no diam discere est. Usu laudem labore ei, vix in quodsi maiestatis voluptatibus,
+                        quo fabulas deserunt definitionem ea.</div>
+                    <div class="red_container">
+                        <div class="red_circle"></div>
+                        <div class="text3">3</div>
+                        <div class="red_box"></div>
+                    </div>
+                </div>
+            </article>
+
     </div>
 </body>
 
